--- a/layouts/partials/share_icons.html
+++ b/layouts/partials/share_icons.html
@@ -13,6 +13,8 @@
 {{- $ShareButtons := (.Param "ShareButtons")}}
 {{- with $ShareButtons }}{{ $custom = true }}{{ end }}
 
+<h2>Share with people!</h2>
+
 <ul class="share-buttons">
     {{- if (or (cond ($custom) (in $ShareButtons "x") (true)) (cond ($custom) (in $ShareButtons "twitter") (true))) }}
     <li>
